fixed carousel height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@ body {
       display: none;
     }
 
+
+    .carousel-inner img{
+      height: 10em;
+    }
+
   }
  
   @media all and (min-width: 992px) {
@@ -165,7 +170,7 @@ body {
   .services .icon {
     width: 90px;
     height: 90px;
-    background: #2D6CDF;
+    background: #0d48b6;
     display: table;
     text-align: center;
     margin: 0 auto;
